0.92

* Enabled iBox support in the plugin.
* Refactored some image handling out of the Flickr class and into base class.
* Fixed a bug with SimplePie not retrieving the full image from Flickr.

0.91b

* Fixes an issue with links on version 2 feeds (using GUID).

0.91

* Any newly added feeds will now attempt to use the GUID as a key.
* Fixed an issue that was causing duplicate events when you added a new feed.

0.90b

* Updated localized strings.
* Added current version info to change log.

0.90a

* Change log will now pull directly from SVN.
* Updated icon for Last.fm.
* Deleting a feed will now use the lifestream_safe_query function, and raise an exception if there is an SQL error.

0.90

* Added icon_url global option for feeds.
* Added feed_label global option for feeds.
* RSS/Atom feeds will now use the the title + link as the key. Please note, that this only affects newly created feeds.

0.87

* Added Lifestream RSS feed (available via /feed/lifestream-feed/ or /feed/?feed=lifestream-feed).
* Fixed an issue with the path to the daily digest template on some hosts.
* Added Github plugin thanks to Chromakode.

0.86

* Changed upgrade process to silently ignore alter complications.
* Updated homepage (we've moved the WP project completely to iBegin).
* Added iTunes plugin.
* $key is now passed to the yield() function.
* Fixed an issue where the key was being overwritten on generic feeds.
* You can now specify an option requirement as `null` to have it hidden.

0.85c

* Fixed an issue with YouTubeFeed.
* Deleting a feed now deletes related errors.

0.85

* YouTubeFeed now handles favorites (thanks futtta).
* Default options for `lifestream_sidebar_widget()` have been changed.
* Support for a `local_feeds.inc.php` file has been added.
* Added Spanish localization from Guillermo López.

0.84c

* Added Xbox Live feed.

0.84b

* Added Steam feed (http://www.steampowered.com/).

0.84

* Added `feed_types` argument to lifestream output functions.