@@ -4,15 +4,15 @@ Plugin Name: LifeStream
 Plugin URI: http://www.ibegin.com/labs/wp-lifestream/
 Description: Displays your social activity in a lifestream. (Requires PHP/MySQL 5)
 Author: David Cramer
-Version: 0.91b
+Version: 0.92
 Author URI: http://www.davidcramer.net
 */
 
 // since so many people miss the installation requirements
 if (phpversion() >= 5)
 {
-    define(LIFESTREAM_BUILD_VERSION, '0.91b');
-    define(LIFESTREAM_VERSION, 0.91);
+    define(LIFESTREAM_BUILD_VERSION, '0.92');
+    define(LIFESTREAM_VERSION, 0.92);
     define(LIFESTREAM_PLUGIN_FILE, __FILE__);
 
     include('_lifestream.php');
